@startuml MPD_Tortiki
'== A4 portrait ==
skinparam pageWidth 210mm
skinparam pageMargin 10
skinparam dpi 150
scale max 800 width
skinparam backgroundColor #FFFFFF
skinparam defaultFontSize 9
skinparam shadowing false

skinparam class {
  BackgroundColor #F3F8FC
  BorderColor #1B6FA8
  FontColor #1B3A4B
  ArrowColor #1B6FA8
  FontSize 9
}

title Modèle Physique de Données (MPD) — Tortiki (PostgreSQL 16)

entity "users" as t_user {
  id : BIGSERIAL <<PK>>
  --
  email : VARCHAR(255) UNIQUE NOT NULL
  password_hash : VARCHAR(255) NOT NULL
  first_name : VARCHAR(100) NOT NULL
  last_name : VARCHAR(100) NOT NULL
  phone : VARCHAR(20)
  avatar_url : VARCHAR(500)
  city : VARCHAR(100)
  latitude : DOUBLE PRECISION
  longitude : DOUBLE PRECISION
  enabled : BOOLEAN DEFAULT true
  created_at : TIMESTAMP DEFAULT now()
  updated_at : TIMESTAMP DEFAULT now()
}

entity "roles" as t_role {
  id : BIGSERIAL <<PK>>
  --
  name : VARCHAR(50) UNIQUE NOT NULL
}

entity "user_roles" as t_ur {
  user_id : BIGINT <<FK>>
  role_id : BIGINT <<FK>>
  --
  PRIMARY KEY(user_id, role_id)
}

entity "listings" as t_list {
  id : BIGSERIAL <<PK>>
  --
  seller_id : BIGINT <<FK>> NOT NULL
  cuisine_type_id : BIGINT <<FK>> NOT NULL
  title : VARCHAR(255) NOT NULL
  description : TEXT
  price : NUMERIC(10,2) CHECK(price>0)
  portions : INTEGER CHECK(portions>0)
  photo_url : VARCHAR(500)
  pickup_address : VARCHAR(255) NOT NULL
  city : VARCHAR(100) NOT NULL
  pickup_lat : DOUBLE PRECISION
  pickup_lng : DOUBLE PRECISION
  pickup_datetime : TIMESTAMP NOT NULL
  status : listing_status DEFAULT 'ACTIVE'
  created_at : TIMESTAMP DEFAULT now()
  updated_at : TIMESTAMP DEFAULT now()
  --
  IDX idx_listings_seller_id
  IDX idx_listings_cuisine_status
  IDX idx_listings_location
}

entity "cuisine_types" as t_cuis {
  id : BIGSERIAL <<PK>>
  --
  name : VARCHAR(100) UNIQUE NOT NULL
  description : TEXT
  enabled : BOOLEAN DEFAULT true
}

entity "allergens" as t_alrg {
  id : BIGSERIAL <<PK>>
  --
  name : VARCHAR(100) UNIQUE NOT NULL
  enabled : BOOLEAN NOT NULL DEFAULT true
}

entity "listing_allergens" as t_la {
  listing_id : BIGINT <<FK>>
  allergen_id : BIGINT <<FK>>
  --
  PRIMARY KEY(listing_id, allergen_id)
}

entity "contact_requests" as t_cr {
  id : BIGSERIAL <<PK>>
  --
  listing_id : BIGINT <<FK>> NOT NULL
  buyer_id : BIGINT <<FK>> NOT NULL
  portions : INTEGER NOT NULL DEFAULT 1 CHECK(portions>0)
  status : contact_request_status DEFAULT 'PENDING'
  message : TEXT
  created_at : TIMESTAMP DEFAULT now()
  updated_at : TIMESTAMP DEFAULT now()
  --
  UNIQUE(listing_id, buyer_id)
}

entity "reviews" as t_rev {
  id : BIGSERIAL <<PK>>
  --
  contact_request_id : BIGINT <<FK>> UNIQUE NOT NULL
  reviewer_id : BIGINT <<FK>> NOT NULL
  seller_id : BIGINT <<FK>> NOT NULL
  listing_id : BIGINT <<FK>> NOT NULL
  rating : INTEGER CHECK(rating BETWEEN 1 AND 5)
  comment : TEXT
  created_at : TIMESTAMP DEFAULT now()
}

t_user "1" -- "0..*" t_list : seller_id
t_user "1" -- "0..*" t_ur
t_role "1" -- "0..*" t_ur
t_cuis "1" -- "0..*" t_list
t_list "1" -- "0..*" t_la
t_alrg "1" -- "0..*" t_la
t_list "1" -- "0..*" t_cr
t_user "1" -- "0..*" t_cr : buyer_id
t_cr "1" -- "0..1" t_rev
t_user "1" -- "0..*" t_rev
t_list "1" -- "0..*" t_rev

note bottom of t_cr
  Types ENUM PostgreSQL natifs :
  listing_status, contact_request_status
  (valeur MODERATED ajoutée en V2)
  Migrations : V1 à V7 (Flyway)
end note

note left of t_user
  latitude/longitude en DOUBLE PRECISION
  depuis V4 (alignement avec le type Double
  mappé par UserJpaEntity)
end note

note right of t_list
  pickup_lat/pickup_lng en DOUBLE PRECISION
  depuis V3. Colonne city ajoutée en V7
  (NOT NULL après rétro-remplissage)
end note

note top of t_alrg
  Colonne enabled ajoutée en V6
  (désactivation d'un allergène par ROLE_ADMIN)
end note

@enduml